--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,15 @@
+asgiref==3.6.0
+autopep8==2.0.1
 Django==4.1.4
 django-cors-headers==3.13.0
 django-filter==22.1
 djangorestframework==3.14.0
 drf-nested-routers==0.93.4
+gunicorn==20.1.0
 Pillow==9.3.0
 psycopg2==2.9.5
-
+pycodestyle==2.10.0
+pytz==2022.7
+sqlparse==0.4.3
+tomli==2.0.1
+whitenoise==6.3.0
