--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ Pillow==9.3.0
 psycopg2==2.9.5
 pycodestyle==2.10.0
 python-dateutil==2.8.2
+python-decouple==3.7
 pytz==2022.7
 s3transfer==0.6.0
 six==1.16.0
