--- a/requirements.txt
+++ b/requirements.txt
@@ -17,6 +17,7 @@ cryptography==39.0.0
 defusedxml==0.7.1
 Django==4.1.4
 django-celery-results==2.4.0
+django-cleanup==6.0.0
 django-cors-headers==3.13.0
 django-decouple==2.1
 django-filter==22.1
