--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,7 @@
 amqp==5.1.1
+arabic-reshaper==3.0.0
 asgiref==3.6.0
+asn1crypto==1.5.1
 async-timeout==4.0.2
 autopep8==2.0.1
 billiard==3.6.4.0
@@ -14,6 +16,7 @@ click-repl==0.2.0
 coreapi==2.3.3
 coreschema==0.0.4
 cryptography==39.0.0
+cssselect2==0.7.0
 defusedxml==0.7.1
 Django==4.1.4
 django-celery-results==2.4.0
@@ -27,30 +30,49 @@ djangorestframework-simplejwt==4.8.0
 djoser==2.1.0
 drf-nested-routers==0.93.4
 gunicorn==20.1.0
+html5lib==1.1
 idna==3.4
 itypes==1.2.0
 Jinja2==3.1.2
 kombu==5.2.4
+lxml==4.9.2
 MarkupSafe==2.1.1
 oauthlib==3.2.2
+oscrypto==1.3.0
 Pillow==9.3.0
 prompt-toolkit==3.0.36
 psycopg2==2.9.5
 pycodestyle==2.10.0
 pycparser==2.21
+pyHanko==0.16.0
+pyhanko-certvalidator==0.19.8
 PyJWT==2.6.0
+PyPDF3==1.0.6
+python-bidi==0.4.2
 python3-openid==3.2.0
 pytz==2022.7
+pytz-deprecation-shim==0.1.0.post0
+PyYAML==6.0
+qrcode==7.3.1
 redis==4.4.2
+reportlab==3.6.12
 requests==2.28.2
 requests-oauthlib==1.3.1
 six==1.16.0
 social-auth-app-django==4.0.0
 social-auth-core==4.3.0
 sqlparse==0.4.3
+svglib==1.5.1
+tinycss2==1.2.1
 tomli==2.0.1
+tqdm==4.64.1
+tzdata==2022.7
+tzlocal==4.2
 uritemplate==4.1.1
+uritools==4.0.1
 urllib3==1.26.14
 vine==5.0.0
 wcwidth==0.2.6
+webencodings==0.5.1
 whitenoise==6.3.0
+xhtml2pdf==0.2.8
