--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ arabic-reshaper==3.0.0
 asgiref==3.6.0
 asn1crypto==1.5.1
 async-timeout==4.0.2
+attrs==22.2.0
 autopep8==2.0.1
 billiard==3.6.4.0
 celery==5.2.7
@@ -29,9 +30,11 @@ djangorestframework==3.14.0
 djangorestframework-simplejwt==4.8.0
 djoser==2.1.0
 drf-nested-routers==0.93.4
+exceptiongroup==1.1.0
 gunicorn==20.1.0
 html5lib==1.1
 idna==3.4
+iniconfig==2.0.0
 itypes==1.2.0
 Jinja2==3.1.2
 kombu==5.2.4
@@ -39,7 +42,9 @@ lxml==4.9.2
 MarkupSafe==2.1.1
 oauthlib==3.2.2
 oscrypto==1.3.0
+packaging==23.0
 Pillow==9.3.0
+pluggy==1.0.0
 prompt-toolkit==3.0.36
 psycopg2==2.9.5
 pycodestyle==2.10.0
@@ -48,6 +53,8 @@ pyHanko==0.16.0
 pyhanko-certvalidator==0.19.8
 PyJWT==2.6.0
 PyPDF3==1.0.6
+pytest==7.2.1
+pytest-django==4.5.2
 python-bidi==0.4.2
 python3-openid==3.2.0
 pytz==2022.7
