--- a/requirements.txt
+++ b/requirements.txt
@@ -40,6 +40,7 @@ Jinja2==3.1.2
 kombu==5.2.4
 lxml==4.9.2
 MarkupSafe==2.1.1
+model-bakery==1.10.1
 oauthlib==3.2.2
 oscrypto==1.3.0
 packaging==23.0
