--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ async-timeout==4.0.2
 attrs==22.2.0
 autopep8==2.0.1
 billiard==3.6.4.0
+boto3==1.26.87
+botocore==1.29.87
 celery==5.2.7
 certifi==2022.12.7
 cffi==1.15.1
@@ -25,6 +27,7 @@ django-cleanup==6.0.0
 django-cors-headers==3.13.0
 django-decouple==2.1
 django-filter==22.1
+django-s3-upload==0.4
 django-templated-mail==1.1.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==4.8.0
@@ -37,6 +40,7 @@ idna==3.4
 iniconfig==2.0.0
 itypes==1.2.0
 Jinja2==3.1.2
+jmespath==1.0.1
 kombu==5.2.4
 lxml==4.9.2
 MarkupSafe==2.1.1
@@ -57,6 +61,7 @@ PyPDF3==1.0.6
 pytest==7.2.1
 pytest-django==4.5.2
 python-bidi==0.4.2
+python-dateutil==2.8.2
 python3-openid==3.2.0
 pytz==2022.7
 pytz-deprecation-shim==0.1.0.post0
@@ -66,6 +71,7 @@ redis==4.4.2
 reportlab==3.6.12
 requests==2.28.2
 requests-oauthlib==1.3.1
+s3transfer==0.6.0
 six==1.16.0
 social-auth-app-django==4.0.0
 social-auth-core==4.3.0
