--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ django-decouple==2.1
 django-filter==22.1
 django-s3-upload==0.4
 django-templated-mail==1.1.1
+django-tinymce==3.5.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==4.8.0
 djoser==2.1.0
