--- a/requirements.txt
+++ b/requirements.txt
@@ -30,6 +30,7 @@ django-filter==22.1
 django-s3-upload==0.4
 django-templated-mail==1.1.1
 django-tinymce==3.5.0
+django_debug_toolbar==3.8.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==4.8.0
 djoser==2.1.0
