--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ django-cors-headers==3.13.0
 django-decouple==2.1
 django-filter==22.1
 django-s3-upload==0.4
+django-signalcontrol==0.1.1
 django-templated-mail==1.1.1
 django-tinymce==3.5.0
 django_debug_toolbar==3.8.1
